--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
-      <section>
+      <header>
         <nav class="navbar navbar-default">
             <div class="container">
               <div class="navbar-header">
@@ -33,9 +33,10 @@
               </div>
             </div>
           </nav>
-      </section>
+      </header>
       <section>
         <div class="parallax">
+          <img class="parallaxLogo" src="img/lazurri_logo.png" width="300px;">
           <div class="parallaxContent">
             <h1>Slogan Goes Right Here</h1>
           </div>
@@ -44,106 +45,110 @@
           </div>
         </div>
       </section>
-      <section>
-        <div id="about" class="about container">
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a href="#"><p type="button">Read More</p></a>
-        </div>
-      </section>
-      <section>
-        <div class="product">
-          <div class="container">
-            <h2>L'AZURRI</h2>
-            <div class="subNav">
-              <p id="productLink1">Product 1</p>
-              <p id="productLink2">Product 2</p>
-              <p id="productLink3">Product 3</p>
-            </div>
-              <div class="rowr row1">
-                <div id="imgBlock1" class="col-sm-6">
-                  <img id="productFloat" src="img/product_Mockup.png" alt="L'azurri Product">
-                  <div id="circle"></div>
-                </div>
-                <div class="col-sm-6">
-                  <div id="textContent" class="textContent1">
-                      <h3>Product 1</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <a href="#"><p type="button">Shop Now</p></a>
-                  </div>
+      <div class="subContainer">
+        <section>
+          <div id="about" class="about container">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#"><p type="button">Read More</p></a>
+          </div>
+        </section>
+        <section>
+          <div class="product">
+            <div class="container">
+              <div class="productHeader">
+                <h2>L'AZURRI</h2>
+                <div class="subNav">
+                  <p id="productLink1" class="activeLink">Product 1</p>
+                  <p id="productLink2">Product 2</p>
+                  <p id="productLink3">Product 3</p>
                 </div>
               </div>
-              <div class="rowr row2">
+                <div class="rowr row1">
+                  <div id="imgBlock1" class="col-sm-6">
+                    <img id="productFloat" src="img/product_Mockup.png" alt="L'azurri Product">
+                    <div id="circle"></div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div id="textContent" class="textContent1">
+                        <h3>Product 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <a href="#"><p type="button">Shop Now</p></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="rowr row2">
 
-                <div class="col-sm-6">
-                  <div id="textContent" class="textContent2">
-                      <h3>Product 2</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <a href="#"><p type="button">Shop Now</p></a>
+                  <div class="col-sm-6">
+                    <div id="textContent" class="textContent2">
+                        <h3>Product 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <a href="#"><p type="button">Shop Now</p></a>
+                    </div>
+                  </div>
+                  <div id="imgBlock2" class="col-sm-6">
+                    <img id="productFloat2" src="img/product_Mockup.png" alt="L'azurri Product">
+                    <div id="circle2"></div>
                   </div>
                 </div>
-                <div id="imgBlock2" class="col-sm-6">
-                  <img id="productFloat2" src="img/product_Mockup.png" alt="L'azurri Product">
-                  <div id="circle2"></div>
-                </div>
-              </div>
-              <div class="rowr row3">
-                <div id="imgBlock3" class="col-sm-6">
-                  <img id="productFloat3" src="img/product_Mockup.png" alt="L'azurri Product">
-                  <div id="circle"></div>
-                </div>
-                <div class="col-sm-6">
-                  <div id="textContent" class="textContent3">
-                      <h3>Product 3</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <a href="#"><p type="button">Shop Now</p></a>
+                <div class="rowr row3">
+                  <div id="imgBlock3" class="col-sm-6">
+                    <img id="productFloat3" src="img/product_Mockup.png" alt="L'azurri Product">
+                    <div id="circle"></div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div id="textContent" class="textContent3">
+                        <h3>Product 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <a href="#"><p type="button">Shop Now</p></a>
+                    </div>
                   </div>
                 </div>
-              </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="homeForm container">
-          <h2>Receive Information on L'azurri Products</h2>
-          <form>
-            <div class="form-group">
-              <label class="sr-only" for="email">Email address:</label>
-              <input type="email" class="form-control" id="email" placeholder="Email">
-            </div>
-            <button type="submit" class="btn btn-default">Send</button>
-          </form>
-        </div>
-      </section>
-      <section>
-        <footer>
-          <div class="container footer">
-            <div class="footerCol">
-              <h3>Discover</h3>
-              <p>Home</p>
-              <p>About</p>
-              <p>Contact Us</p>
-              <p>Blog</p>
-              <p>Shop</p>
-            </div>
-            <div class="footerCol">
-              <h3>Let's Connect!</h3>
-              <p>info@lazurri.com</p>
-              <p>1 (888) 567 - 5678</p>
-              <div class="socialMedia">
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-youtube-play"></i>
-              </div>
-            </div>
-            <div class="footerCol">
-              <h3>L'AZURRI</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
-        </footer>
-      </section>
+        </section>
+        <section>
+          <div class="homeForm container">
+            <h2>Receive Information on L'azurri Products</h2>
+            <form>
+              <div class="form-group">
+                <label class="sr-only" for="email">Email address:</label>
+                <input type="email" class="form-control" id="email" placeholder="Email">
+              </div>
+              <button type="submit" class="btn btn-default">Send</button>
+            </form>
+          </div>
+        </section>
+        <section>
+          <footer>
+            <div class="container footer">
+              <div class="footerCol">
+                <h3>Discover</h3>
+                <p>Home</p>
+                <p>About</p>
+                <p>Contact Us</p>
+                <p>Blog</p>
+                <p>Shop</p>
+              </div>
+              <div class="footerCol">
+                <h3>Let's Connect!</h3>
+                <p>info@lazurri.com</p>
+                <p>1 (888) 567 - 5678</p>
+                <div class="socialMedia">
+                  <i class="fa fa-instagram"></i>
+                  <i class="fa fa-facebook"></i>
+                  <i class="fa fa-twitter"></i>
+                  <i class="fa fa-youtube-play"></i>
+                </div>
+              </div>
+              <div class="footerCol">
+                <h3>L'AZURRI</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+          </footer>
+        </section>
+      </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
