mades ome css and javascript changes

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </header>
       <section>
         <div class="parallax">
-          <img class="parallaxLogo" src="img/lazurri_logo.png" width="300px;">
+          <img class="parallaxLogo" src="img/lazurri_logo.png">
           <div class="parallaxContent">
-            <h1>Slogan Goes Right Here</h1>
+            <h1 id="changeText" ></h1>
           </div>
           <div class="animatedButton text-center">
             <a href="#about"><img class="floating2" src="img/more_Button.gif" alt="See More"></a>
